<resources>
    <string name="app_name">대마장터</string>
    <string name="app_intro">평화로운 거래, 새로운 만남 대마장터</string>

    <string name="loading">로딩중입니다…</string>
    <string name="back_to_exit">뒤로 버튼을 한번 더 누르시면 종료됩니다.</string>

    <string name="empty_post">아직 등록하신 상품이 없습니다.</string>
    <string name="empty_interest">아직 관심을 표시한 상품이 없습니다.</string>
    <string name="empty_list">등록된 상품이 없습니다.</string>
    <string name="empty_chat">채팅방이 아직 없습니다.</string>

    <!--account-->
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="ask_logout">정말로 로그아웃 하시겠습니까?</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="forget_password">비밀번호를 잊으셨나요?</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_confirm">새 비밀번호 확인</string>
    <string name="name">닉네임</string>
    <string name="gender">성별</string>
    <string name="grade">학년</string>
    <string name="email">이메일</string>
    <string name="mail_confirm">인증코드 확인</string>
    <string name="confirm_code">인증코드</string>
    <string name="original_password_confirm">기존 비밀번호 확인</string>
    <string name="original_password">기존 비밀번호</string>
    <string name="send_temp_password">임시 비밀번호 발송</string>
    <string name="send_temp_password_success">임시 비밀번호 발송에 성공했습니다</string>
    <string name="next">다음</string>

    <!--content description-->
    <string name="description_logo">앱 로고</string>

    <!--main-->
    <string name="purchase">구매</string>
    <string name="rent">대여</string>
    <string name="post">글쓰기</string>
    <string name="chatting">채팅</string>
    <string name="me">ME!</string>

    <string name="post_purchase_product">구매 상품 등록하기</string>
    <string name="post_rent_product">대여 상품 등록하기</string>

    <!--ME!-->
    <string name="interest_product">관심 상품</string>
    <string name="my_post_product">나의 등록 상품</string>
    <string name="past_saw_product">최근 본 상품</string>
    <string name="user_info">회원 정보</string>
    <string name="modify_name">닉네임 변경</string>
    <string name="change_language">언어 변경</string>
    <string name="modify_password">비밀번호 변경</string>
    <string name="open_source">오픈소스 라이센스</string>
    <string name="version_info">버전 정보</string>
    <string name="current_version">현재 버전: </string>
    <string name="my_page">님의 마이페이지</string>
    <string name="success_change_nick">닉네임 변경에 성공했습니다</string>

    <string name="korean" translatable="false">한국어</string>
    <string name="english" translatable="false">English</string>

    <string name="change_language_to">변경하시겠습니까?</string>

    <string name="post_date">등록일:</string>
    <string name="won">원</string>
    <string name="deal_with_chatting">채팅으로 거래하기</string>
    <string name="comment">댓글</string>
    <string name="count">개</string>
    <string name="report">신고하기</string>
    <string name="related_product">관련 상품</string>
    <string name="recommend_product">추천 상품</string>
    <string name="interest">관심 상품에 등록했습니다</string>
    <string name="un_interest">관심 상품에서 해제했습니다</string>

    <!--comment-->
    <string name="all">총</string>
    <string name="add_comment">댓글 작성</string>
    <string name="content">내용</string>


    <string name="input_content">내용을 입력해주세요…</string>
    <string name="input_search">검색어를 입력해주세요…</string>
    <string name="recent_search_word">최근 검색어</string>


    <string name="title">제목</string>
    <string name="price">가격</string>
    <string name="category">카테고리</string>
    <string name="picture">사진</string>
    <string name="max_5">최대 5개</string>
    <string name="tag">태그</string>
    <string name="post_product">상품 등록</string>
    <string name="rental_time">대여 가능 시간 (선택)</string>
    <string name="max_image">이미지는 최대 5개입니다</string>
    <string name="start">시작</string>
    <string name="end">끝</string>
    <string name="possible_time">대여 가능 시간</string>

    <!--category-->
    <string name="book" translatable="false">도서</string>
    <string name="food" translatable="false">식품</string>
    <string name="sports" translatable="false">운동기구</string>
    <string name="necessity" translatable="false">생필품</string>
    <string name="device" translatable="false">전자기기</string>
    <string name="cloth" translatable="false">의류</string>

    <string name="fail_login">이메일 또는 비밀번호가 틀렸습니다</string>
    <string name="fail_invalid_email">유효하지 않은 이메일입니다</string>
    <string name="fail_diff_password">비밀번호가 일치하지 않습니다</string>
    <string name="fail_sign_up">회원가입에 실패했습니다</string>
    <string name="fail_existent_email">이미 존재하는 이메일입니다</string>
    <string name="fail_existent_nick">이미 존재하는 닉네임입니다</string>
    <string name="fail_send_email">이메일 전송에 실패했습니다</string>
    <string name="fail_confirm_code">인증코드를 확인할 수 없습니다</string>
    <string name="fail_invalid_confirm_code">인증코드가 유효하지 않습니다</string>
    <string name="fail_server_error">네트워크 상태를 확인해주세요</string>
    <string name="fail_change_password">비밀번호를 변경하지 못했습니다</string>
    <string name="fail_permission_denied">권한이 필요합니다</string>
    <string name="fail_non_exist_post">존재하지 않는 글입니다</string>
    <string name="fail_unauthorized">재로그인이 필요합니다</string>
    <string name="fail_join_chat_room">채팅방에 접속하지 못했습니다</string>

    <string name="tilde" translatable="false">~</string>
    <string name="confirm">확인</string>

    <string name="colon" translatable="false">:</string>

    <string name="ask_purchase_complete">정말 판매 완료 하시겠습니까?</string>
    <string name="ask_rent_complete">대여를 그만하시겠습니까?</string>
    <string name="complete">완료</string>

    <string name="modify">수정하기</string>
    <string name="modify_purchase">구매글 수정</string>
    <string name="modify_rent">대여글 수정</string>

    <!--report-->
    <string name="report_comment">댓글 신고</string>
    <string name="report_post">게시물 신고</string>
    <string name="report_reason">신고 사유</string>
    <string name="cancel">취소</string>
    <string name="one_time">1회</string>
    <string name="one_hour">1시간</string>

    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="not_reveal">밝히지 않음</string>

    <string name="slander_or_abuse">비방 및 욕설</string>
    <string name="advertisement">광고</string>
    <string name="etc">기타</string>

    <string name="restart_to_update">업데이트를 위해 재시작</string>
    <string name="restart">재시작</string>
    <string name="retry">재시도</string>

    <string-array name="grade">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/not_reveal</item>
    </string-array>
    <string-array name="report">
        <item>@string/slander_or_abuse</item>
        <item>@string/advertisement</item>
        <item>@string/etc</item>
    </string-array>
</resources>
