<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.dsm.dsmmarketandroid.presentation.ui.auth.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                android:inputType="textWebEmailAddress"
                android:nextFocusDown="@id/et_sign_up_password"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@id/til_sign_up_email"
            app:layout_constraintRight_toRightOf="@id/til_sign_up_email"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:nextFocusDown="@id/et_sign_up_password_confirm"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_sign_up_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@id/til_sign_up_email"
            app:layout_constraintRight_toRightOf="@id/til_sign_up_email"
            app:layout_constraintTop_toBottomOf="@id/til_sign_up_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sign_up_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_confirm"
                android:text="@={viewModel.reType}"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>